--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,10 +14,10 @@ en:
             requerida que figuri en el cens.
       custom_csv_census:
         explanation: Verifica't mitjançant el cens de l'organització
-        name: Cens de l'organització
+        name: Cens personalitzat de l'organització
       custom_csv_census_authorization_handler:
         explanation: Verifica't mitjançant el cens de l'organització
-        name: Cens de l'organització
+        name: Cens personalitzat de l'organització
     verifications:
       custom_csv_census:
         admin:
@@ -33,12 +33,12 @@ en:
               confirm: Aquesta acció no es pot desfer. Estàs segur/a que voleu continuar?
               destroy: Esborrar dades del cens i revocar autoritzacions
               empty: Encara no hi ha dades censals carregades. Utilitza el següent
-                formulari per importar-lo utilitzant un fitxer CSV.
+                formulari per importar-ne utilitzant un fitxer CSV.
               file: Arxiu excel .csv amb les dades del cens
               info: 'Ha de ser un fitxer generat en excel i exportat en CSV amb les
                 següents columnes:'
-              new: Pujar un nou cens
-              records: Hi ha un total de %{count} registres carregats. La última càrrega
+              new: Puja un nou cens
+              records: Hi ha un total de %{count} registres carregats. L'última càrrega
                 va ser el dia %{due_date}
               submit: Carrega
               title: Dades del cens carregat
